# transform

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang.yml  cmake-multi-platform.yml  gcc.yml  msvc.yml
docs/: CMakeLists.txt  Doxyfile.in
submodules/: CMakeLists.txt
tests/: AddTest.cmake  CMakeLists.txt
tests/glsl/: geometric.cc  matrix.cc
tests/mat/: func.cc  mat1x1.cc  mat1xr.cc  matcx1.cc  matcxr.cc
tests/vec/: func.cc  geometric.cc  vec1.cc  vec2.cc  vec3.cc  vec4.cc  vecn.cc
transform/: CMakeLists.txt  glsl.h  lib.cc  mat.h  sca.h  transform.cc  transform.h  types.h  vec.h
transform/glsl/: common.h  exponential.h  geometric.h  matrix.h  trigonometric.h
transform/mat/: func.h  mat.h  mat1x1.h  mat1xr.h  matcx1.h  matcxr.h
transform/transform/: basic.h  special.h
transform/vec/: common.h  exponential.h  func.h  geometric.h  trigonometric.h  vec.h  vec1.h  vec2.h  vec3.h  vec4.h  vecn.h
